# immuni-backend-app-configuration

./: CONTRIBUTING.md  README.md  entrypoint.sh  pyproject.toml  pytest.ini  sonar-project.properties
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
docker/: README.md  docker-compose.yml
immuni_app_configuration/: sanic.py
immuni_app_configuration/apis/: settings.py
immuni_app_configuration/core/: config.py  managers.py
immuni_app_configuration/models/: setting.py  swagger.py
tests/: conftest.py  test_managers.py
tests/apis/: test_settings.py
tests/fixtures/: core.py  setting.py
tests/models/: test_settings.py
