[tool.poetry]
name = "immuni-app-configuration"
version = "1.0.0"
description = "Immuni microservice to serve settings for the client."
authors = []

[tool.poetry.dependencies]
immuni-common = { "path" = "common", develop = true }
python = "^3.8"

[tool.poetry.dev-dependencies]
immuni-common-dev = { "path" = "common/dev", develop = true }

[tool.poetry.scripts]
checks = "common.scripts:checks"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
